@@ -48,6 +48,7 @@ if (STATIC_BUILD OR NOT USE_SYSTEM_LIBP11)
   if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR
       ${CMAKE_SYSTEM_NAME} STREQUAL "kFreeBSD" OR
       ${CMAKE_SYSTEM_NAME} STREQUAL "FreeBSD" OR
+      ${CMAKE_SYSTEM_NAME} STREQUAL "OpenBSD" OR
       ${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
     list(APPEND LIBP11_SOURCES 
       ${LIBP11_SOURCES_DIR}/src/atfork.c
